--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,36 @@
+/* Browser-Stile zurücksetzen */
+
+html, body, ul, li {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* Browser-Stile zurücksetzen ENDE */
+
 @font-face {
     font-family: 'ZenKakuGothicAntique';
     src: url('../Schriften/ZenKakuGothicAntique-Regular.ttf') format('truetype');
@@ -14,18 +47,22 @@
 
 
 .grid-container {
-    display: grid;
+    /*display: grid;
     grid-row-gap: 10px;
     grid-column-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;*/
+
+    width: 1120px;
+    margin-left: auto;
+    margin-right: auto
 }
 
 
 body {
     font-family: ZenKakuGothicAntique;
     background-color: rgba(242, 221, 156, 1);
-
+    margin: 0;
 }
 
 
@@ -35,11 +72,14 @@ body {
     font-size: 20pt;
 }
 
-header {
-    grid-column: 1 / span 12;
-    grid-row: 1 / span 1;
+.header {
     background-color:rgba(29, 37, 22, 1);
     font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
 }
 
 nav ul {
