--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,36 +1,3 @@
-/* Browser-Stile zurücksetzen */
-
-html, body, ul, li {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/* Browser-Stile zurücksetzen ENDE */
-
 @font-face {
     font-family: 'ZenKakuGothicAntique';
     src: url('../Schriften/ZenKakuGothicAntique-Regular.ttf') format('truetype');
@@ -45,18 +12,53 @@ table {
     font-style: normal;
 }
 
-
-.grid-container {
-    /*display: grid;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;*/
-
-    width: 1120px;
-    margin-left: auto;
-    margin-right: auto
+@font-face {
+    font-family: 'ZenKakuGothicAntique';
+    src: url('../Schriften/ZenKakuGothicAntique-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
 }
+
+
+/* Browser-Stile zurücksetzen */
+
+html,
+body,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+}
+
+body {
+    line-height: 1;
+}
+
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* Browser-Stile zurücksetzen ENDE */
 
 
 body {
@@ -66,14 +68,29 @@ body {
 }
 
 
-h1 {
+.container {
+    width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header {
+    background-color: rgba(29, 37, 22, 1);
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+}
+
+h1  {
 
     font-size: 80px;
     font-style: normal;
     font-weight: 900;
     line-height: 100%;
-    font-style: white;
-    
+    color: white;
 }
 
 h2 {
@@ -87,14 +104,23 @@ p {
     font-size: 24px;
 }
 
-
-.grid-item {
-
-    padding: 50px;
-    font-size: 20pt;
+nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    color: white;
 }
 
-.header {
+li {
+    font-size: 24px;
+}   
+.navigation-link {
+    text-decoration: none;
+    color: white;
+}
+
+footer {
     background-color: rgba(29, 37, 22, 1);
     font-weight: bold;
 
@@ -104,45 +130,8 @@ p {
     height: 100px;
 }
 
-nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-    font-style: white;
-}
-
-.navigation-link {
-    text-decoration: none;
-    color: white;
-}
-
-
-
-main {
-    grid-column: 1 / span 12;
-    grid-row: 2 / span 4;
-
-}
-
-footer {
-    grid-column: 1 / span 12;
-    grid-row: 6 / span 1;
-    background-color: rgba(29, 37, 22, 1);
-    font-weight: bold;
-}
-
-footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-    font-style: white;
-
-}
 
 .footer-link {
     text-decoration: none;
     color: white;
-
 }
