--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,7 +69,7 @@ body {
 
 
 .container {
-    width: 1120px;
+    width: 1130px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -102,6 +102,7 @@ h2 {
 p {
 
     font-size: 24px;
+    font-weight: 900;
 }
 
 nav ul {
