--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,7 +69,7 @@ body {
 
 
 .container {
-    max-width: 1130px;
+    width: 1130px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -77,14 +77,13 @@ body {
 .header {
     background-color: rgba(29, 37, 22, 1);
     font-weight: bold;
-
     display: flex;
     align-items: center;
     width: 100%;
     height: 100px;
 }
 
-h1  {
+h1 {
 
     font-size: 80px;
     font-style: normal;
@@ -117,7 +116,8 @@ nav ul {
 li {
     font-size: 24px;
     font-weight: bold;
-}   
+}
+
 .navigation-link {
     text-decoration: none;
     color: white;
@@ -137,4 +137,47 @@ footer {
 .footer-link {
     text-decoration: none;
     color: white;
+}
+
+/*** Small laptop ***/
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 740px;
+    }
+
+    .header {
+        height: 80px;
+    }
+
+    h1 {
+        font-size: 60px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    li {
+        font-size: 18px;
+    }
+
+    footer {
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 480px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 95%;
+    }
 }
