--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -1,19 +1,85 @@
-img{
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.schreibeuns {
+    position: absolute;
+    top: 50%;
+}
+
+.form-container label {
+    margin-bottom: 60px;
+}
+
+.form-container label,
+.form-container input,
+.form-container textarea {
+    margin-bottom: 20px;
+    position: relative;
+    top: -40px;
+}
+
+.megaphon {
     width: 445px;
     height: 445px;
-    position: absolute; 
-    top: 176px; 
-    right: 207px; 
+    position: absolute;
+    top: 260px;
+    right: 207px;
+    z-index: 3;
+}
+
+.header {
+    background-color: rgba(29, 37, 22, 1);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    position: relative;
+    z-index: 2;
+}
+
+.headerbild {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-top: -100px;
+    position: relative;
+    z-index: 1;
+}
+
+
+
+.bohnen {
+    width: 140px;
+    height: 140px;
+    position: absolute;
+    top: 1270px;
+    left: 600px;
+    z-index: 3;
+}
+
+.spargeln {
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top: 1290px;
+    left: 280px;
+    transform: scaleX(-1);
+    z-index: 3;
+
 }
 
 .form-container {
     display: flex;
     flex-direction: column;
-    max-width: 300px; 
-    margin: 0; 
+    max-width: 300px;
+    margin: 0;
 }
 
-label, input {
+label,
+input {
     margin-bottom: 10px;
     border-radius: 10px;
     border: none;
@@ -23,7 +89,7 @@ label {
     font-size: 32px;
     text-transform: uppercase;
     font-weight: bold;
-    
+
 }
 
 textarea {
@@ -47,3 +113,70 @@ textarea {
     height: 260px;
 }
 
+h1 {
+
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+    width: 1130px;
+    height: 172px;
+    flex-shrink: 0;
+    z-index: 3;
+
+}
+
+
+.footer {
+    background-color: rgba(29, 37, 22, 1);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    position: relative;
+    z-index: 2;
+}
+
+.footerbild {
+    width: 100%;
+    height: auto;
+    margin-bottom: -100px;
+    display: block;
+    position: relative;
+    z-index: 1;
+}
+
+#sendenButton {
+    width: 125px;
+    background-color: rgba(157, 192, 28, 1);
+    color: #fff;
+    font-family: 'ZenKakuGothicAntique';
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    /* Change cursor to pointer on hover */
+    transition: background-color 0.3s ease;
+}
+
+#sendenButton:hover {
+    background-color: rgb(120, 146, 25);
+}
+
+.naragmbh {
+    line-height: 0.5;
+    text-align: left;
+    position: absolute;
+    top: 64%;
+    left: 50%;
+    flex-shrink: 0;
+    z-index: 3;
+}
+#email {
+    font-family: 'ZenKakuGothicAntique';
+    font-size: 20px;
+}
