--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,8 +70,7 @@ body {
 
 .container {
     width: 1130px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 .header {
@@ -79,6 +78,7 @@ body {
     font-weight: bold;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 100px;
 }
@@ -105,10 +105,17 @@ p {
     font-weight: bold;
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
 nav ul {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    align-items: center;
+    gap: 30px;
     list-style: none;
     color: white;
 }
@@ -116,9 +123,11 @@ nav ul {
 li {
     font-size: 24px;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
-.navigation-link {
+.navigation-link, 
+.footer-link {
     text-decoration: none;
     color: white;
 }
@@ -126,18 +135,52 @@ li {
 footer {
     background-color: rgba(29, 37, 22, 1);
     font-weight: bold;
-
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 100px;
 }
 
-
-.footer-link {
-    text-decoration: none;
-    color: white;
+.footer-list {
+    display:flex;
+    gap: 30px;
+    list-style: none;
+    margin-left: auto;
 }
+
+.footer-link, 
+.footer img {
+    margin: 0;
+}
+
+.footer img {
+margin-left: 30px;
+
+}
+
+.footer-link:first-child {
+    margin-left: 0;
+}
+
+
+#button {
+    width: fit-content;
+    background-color: rgba(157, 192, 28, 1);
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#button:hover {
+    background-color: rgb(120, 146, 25);
+}
+
 
 /*** Small laptop ***/
 @media screen and (max-width: 1200px) {
