--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,8 +182,8 @@ margin-left: 30px;
 }
 
 
-/*** Small laptop ***/
-@media screen and (max-width: 1200px) {
+/*** Tablet  ***/
+@media screen and (max-width: 992px) {
     .container {
         width: 740px;
     }
@@ -213,14 +213,9 @@ margin-left: 30px;
     }
 }
 
-@media screen and (max-width: 768px) {
+/*** Handy  ***/
+@media screen and (max-width: 600px) {
     .container {
         width: 480px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .container {
-        width: 95%;
     }
 }
