--- a/CSS/style.css
+++ b/CSS/style.css
@@ -164,7 +164,7 @@ margin-left: 30px;
 }
 
 
-#button {
+.button {
     width: fit-content;
     background-color: rgba(157, 192, 28, 1);
     color: #fff;
@@ -183,7 +183,7 @@ margin-left: 30px;
 
 
 /*** Tablet  ***/
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 700px) {
     .container {
         width: 740px;
     }
@@ -214,7 +214,7 @@ margin-left: 30px;
 }
 
 /*** Handy  ***/
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     .container {
         width: 480px;
     }
