--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -1,20 +1,7 @@
 .bildheader {
-    width: 110%;
+    max-width: 100%;
     height: auto;
     margin-top: 0;
     display: block;
     position: relative;
-}
-
-h1 {
-
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: left;
-    margin: 0; 
-    width: 1130px;
-    height: 172px;
-    flex-shrink: 0;
 }
