--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -1,7 +1,139 @@
 .bildheader {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
     margin-top: 0;
     display: block;
     position: relative;
+    z-index: 1;
+}
+
+.bildfooter {
+    width: 100%;
+    margin-top: 0;
+    display: block;
+    position: relative;
+}
+
+.warenkorb {
+    width: 15%;
+    margin-left: 60%;
+    margin-top: -30%;
+    position: relative;
+    z-index: 1;
+}
+.trennstrich {
+
+    width: 100%;
+}
+
+.schritte {
+
+    padding: 20px;
+    text-transform: none;
+}
+
+.werte {
+
+    padding: 20px;
+    text-transform: none;
+}
+
+h1 {
+    z-index: 2;
+}
+button {
+    width: fit-content;
+    background-color: rgba(157, 192, 28, 1);
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+    border: none;
+}
+
+button:hover {
+    background-color: rgb(120, 146, 25);
+}
+
+.platform {
+display: flex;
+align-items: flex-start;
+margin-top: 10px;
+
+}
+
+.allehaendler   {
+    margin: 20px;
+
+}
+.haendler   {
+
+    list-style: disc;
+    text-transform: none;
+    margin: 20px;
+}
+
+.spinat {
+    width: 10%;
+    margin-left: 100px;
+    transform: scaleX(-1);
+    z-index: 2;
+}
+
+.karte_bern {
+    display: flex;
+    width: 60%;
+}
+
+/*** small laptop  ***/
+@media screen and (max-width: 1100px) {
+
+    h1 {
+
+        font-size: 70px;
+
+
+    }
+
+
+    .bildheader {
+        width: 100%;
+        height: 400px;
+        margin-top: 0;
+        display: block;
+        position: relative;
+    }
+
+}
+
+/*** Tablet  ***/
+@media screen and (max-width: 768px) {
+
+
+    .bildheader {
+        width: 100%;
+        height: 500px;
+        margin-top: 0;
+        display: block;
+        position: relative;
+    }
+
+
+}
+
+
+
+/*** Handy  ***/
+@media screen and (max-width: 576px) {
+
+    .bildheader {
+        width: 100%;
+        height: 600px;
+        margin-top: 0;
+        display: block;
+        position: relative;
+    }
+
 }
