--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -1,3 +1,5 @@
+/* Bilder bearbeiten: */
+
 .bildheader {
     width: 100%;
     margin-top: 0;
@@ -8,7 +10,6 @@
 
 .bildfooter {
     width: 100%;
-    margin-top: 0;
     display: block;
     position: relative;
 }
@@ -20,10 +21,36 @@
     position: relative;
     z-index: 1;
 }
+
+.gemueseteller {
+    width: 25%;
+    justify-content: end;
+    z-index: 1;
+}
+
+
 .trennstrich {
 
     width: 100%;
 }
+
+
+.karte_bern {
+    display: flex;
+    width: 60%;
+}
+
+
+.spinat {
+    width: 10%;
+    margin-left: 100px;
+    transform: scaleX(-1);
+    z-index: 2;
+}
+
+
+
+/* ab hier Textbearbeitungen: */
 
 .schritte {
 
@@ -40,6 +67,28 @@
 h1 {
     z-index: 2;
 }
+
+
+
+.platform {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 10px;
+
+}
+
+.allehaendler {
+    margin: 20px;
+
+}
+
+.haendler {
+
+    list-style: disc;
+    text-transform: none;
+    margin: 20px;
+}
+
 
 button {
     width: fit-content;
@@ -58,35 +107,7 @@ button:hover {
     background-color: rgb(120, 146, 25);
 }
 
-.platform {
-display: flex;
-align-items: flex-start;
-margin-top: 10px;
 
-}
-
-.allehaendler   {
-    margin: 20px;
-
-}
-.haendler   {
-
-    list-style: disc;
-    text-transform: none;
-    margin: 20px;
-}
-
-.spinat {
-    width: 10%;
-    margin-left: 100px;
-    transform: scaleX(-1);
-    z-index: 2;
-}
-
-.karte_bern {
-    display: flex;
-    width: 60%;
-}
 
 /*** small laptop  ***/
 @media screen and (max-width: 1100px) {
