--- a/CSS/landingpage.css
+++ b/CSS/landingpage.css
@@ -59,9 +59,7 @@ article img {
 .article1 {
     display: flex;
     flex-direction: row;
-    /* Horizontal anordnen */
     justify-content: start;
-    /* Zentrieren der Elemente horizontal */
     align-items: start;
     text-align: start;
     flex-wrap: wrap;
@@ -70,9 +68,7 @@ article img {
 .article2 {
     display: flex;
     flex-direction: row;
-    /* Horizontal anordnen */
     justify-content: start;
-    /* Zentrieren der Elemente horizontal */
     align-items: start;
     text-align: start;
     flex-wrap: wrap;
@@ -80,17 +76,17 @@ article img {
 
 .article3 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: start;
     align-items: start;
     text-align: start;
-    flex-wrap: wrap;
 }
 
 .menue1 {
     width: 149px;
     height: 149px;
     justify-self: end;
+    align-items: center;
 
 }
 
