--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,29 @@
 @font-face {
-    font-family: 'ZenKakuGothicAntique';
-    src: url('../Schriften/ZenKakuGothicAntique-Regular.ttf') format('truetype');
+    font-family: 'Inter';
+    src: url('../Schriften/Inter-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'ZenKakuGothicAntique';
-    src: url('../Schriften/ZenKakuGothicAntique-Bold.ttf') format('truetype');
+    font-family: 'Inter';
+    src: url('../Schriften/Inter-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'ZenKakuGothicAntique';
-    src: url('../Schriften/ZenKakuGothicAntique-Black.ttf') format('truetype');
+    font-family: 'Inter';
+    src: url('../Schriften/Inter-Black.ttf') format('truetype');
     font-weight: 900;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../Schriften/Inter-ExtraBold.ttf') format('truetype');
+    font-weight: extrabold;
     font-style: normal;
 }
 
@@ -62,7 +70,7 @@ table {
 
 
 body {
-    font-family: ZenKakuGothicAntique;
+    font-family: Inter;
     background-color: rgba(242, 221, 156, 1);
     margin: 0;
 }
@@ -105,13 +113,18 @@ h2 {
 
     font-size: 32px;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: extrabold;
+    line-height: 1.3;
+    display: block;
 }
 
 p {
 
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 10px;
+    line-height: 1.5;
+    display: block;
 }
 
 nav {
@@ -268,7 +281,7 @@ footer {
 
     h1 {
 
-        font-size: 48px;
+        font-size: 36px;
         font-style: normal;
         font-weight: 900;
         line-height: 100%;
@@ -279,14 +292,13 @@ footer {
         transform: translate(-50%, -50%);
         text-align: left;
         width: 80%;
-        height: 172px;
         flex-shrink: 0;
 
     }
 
     h2 {
 
-        font-size: 20px;
+        font-size: 18px;
         text-transform: uppercase;
         font-weight: bold;
     }
