--- a/CSS/ueber_uns.css
+++ b/CSS/ueber_uns.css
@@ -1,1 +1,43 @@
+.headerbild {
+    width: 100%;
+    height: auto;
+    top: -150px;
+    margin-top: 0;
+}
+.imgeinkaufsladen {
+    width: auto;       /* Allow the width to adjust based on content and available space */
+    max-width: 390px;  /* Restrict the maximum width */
+    position: absolute;
+    top: 100px;
+    left: 60%;
+}
+.video-container {
+    position: relative; /* Establish positioning context for absolute positioning */
+    display: inline-block; /* Ensure the container only takes up the necessary space */
+}
 
+.video-container video {
+    max-width: 100%; /* Ensure the video does not exceed the container width */
+    width: 100%; 
+    height: auto;   /* Maintain aspect ratio */
+    display: block;
+    margin: 0 auto; /* Center the video */
+    align-items: center; /* This is not needed here unless the video is a flex container, which it isn't in this case */
+    margin-top: 50px;
+    border: 15px solid #155929; /* Green stroke around the video */
+    border-radius: 15px; /* Rounded corners */
+}
+.imgtanne, .imgbaum {
+    position: absolute;
+    bottom: 0;
+    width: auto;       /* Allow the width to adjust based on content and available space */
+    height: auto;      /* Maintain aspect ratio */
+}
+.imgtanne {
+    max-width: 305px;  /* Restrict the maximum width */
+    left: -140px;
+}
+.imgbaum {
+    max-width: 213px;  /* Restrict the maximum width */
+    right: -120px;
+}
