--- a/CSS/ueber_uns.css
+++ b/CSS/ueber_uns.css
@@ -16,25 +16,22 @@
     width: 100%;
 }
 .imgeinkaufsladen {
-    width: auto;       /* Allow the width to adjust based on content and available space */
-    max-width: 390px;  /* Restrict the maximum width */
+    width: 25%;       /* Allow the width to adjust based on content and available space */
     position: absolute;
-    top: 100px;
+    top: 16%;
     left: 60%;
 }
 .imgpfanne {
-    width: auto;       /* Allow the width to adjust based on content and available space */
-    max-width: 272px;  /* Restrict the maximum width */
+    width: 21%;       /* Allow the width to adjust based on content and available space */
     position: absolute;
-    bottom: 100px;
+    bottom: 27%;
     left: 60%;
     z-index: 2;
 }
 .imgbrokkoli {
-    width: auto;       /* Allow the width to adjust based on content and available space */
-    max-width: 102px;  /* Restrict the maximum width */
+    width: 6%;       /* Allow the width to adjust based on content and available space */
     position: absolute;
-    bottom: 240px;
+    bottom: 60%;
     right: 10%;
     z-index: 2;
 }
@@ -57,16 +54,15 @@
 .imgtanne, .imgbaum {
     position: absolute;
     bottom: 0;
-    width: auto;       /* Allow the width to adjust based on content and available space */
     height: auto;      /* Maintain aspect ratio */
 }
 .imgtanne {
-    max-width: 305px;  /* Restrict the maximum width */
-    left: -140px;
+    width: 25%;       /* Allow the width to adjust based on content and available space */
+    right: 84.7%;
 }
 .imgbaum {
-    max-width: 213px;  /* Restrict the maximum width */
-    right: -120px;
+    width: 18%;       /* Allow the width to adjust based on content and available space */
+    left: 92%;
 }
 .buttons {
     width: fit-content;
@@ -82,6 +78,21 @@
 }
 .buttons:hover {
     background-color: rgb(120, 146, 25);
+}
+/* For screens smaller than 768px */
+@media (max-width: 767px) {
+    .buttons {
+        font-size: 18px;
+        padding: 8px;
+    }
+}
+
+/* For screens between 768px and 1023px */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .buttons {
+        font-size: 20px;
+        padding: 9px;
+    }
 }
 .article1 {
     display: flex;
