--- a/CSS/ueber_uns.css
+++ b/CSS/ueber_uns.css
@@ -1,3 +1,4 @@
+
 .headerbild {
     width: 100%;
     height: auto;
@@ -11,8 +12,8 @@
     z-index: 1;
 }
 .trennstrich {
-    margin-top: 60px;
-    margin-bottom: 40px;
+    margin-top: 8%;
+    margin-bottom: 6%;
     width: 100%;
 }
 .imgeinkaufsladen {
@@ -66,7 +67,7 @@
 }
 .buttons {
     width: fit-content;
-    background-color: rgba(157, 192, 28, 1);
+    background-color: #9dc01c;
     color: #fff;
     font-size: 24px;
     font-weight: bold;
@@ -77,7 +78,7 @@
     border: none;
 }
 .buttons:hover {
-    background-color: rgb(120, 146, 25);
+    background-color: #789219;
 }
 /* For screens smaller than 768px */
 @media (max-width: 767px) {
