--- a/CSS/Impressum.css
+++ b/CSS/Impressum.css
@@ -5,13 +5,17 @@
 
 .naragmbh {
     margin-left: auto;
-    line-height: 0.5;
     text-align: right;
 }
 
 .geschaeftsfuehrerinnen {
     margin-top: -70px;
     line-height: 1.2;
+}
+
+h1{
+    font-size: 6vw;
+padding-top: 30px;
 }
 
 .headerbild {     
@@ -31,20 +35,19 @@
 }
 
 .backen {
-    width: 210px;
-    height: 210px;
-    position: absolute; 
-    top: 1240px; 
-    right: 250px; 
-    z-index: 2; 
+    width: 15%;
+margin-left: 85%;
+margin-bottom: -25%;
+    position: relative;
+    z-index: 3;
 }
 
 .laedeli {
-    width: 200px;
-    height: 200px;
-    position: absolute; 
-    top: 350px; 
-    left: 200px; 
+    width: 13%;
+margin-left: 5%;
+margin-top: -6%;
+    position: relative;
+    z-index: 3;
 }
 
 /*** Handy  ***/
@@ -60,10 +63,7 @@
         margin-top: 0px;
     }
 
-    .laedeli {
-        width: 100px;
-        height: 100px;
-margin-left: 0px;
-
-    }
+.headerbild {
+    height: 150px;
+}
 }
