--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -34,6 +34,15 @@
     display: block;
     position: relative;
 }
+.header-container {
+    font-size: 80px;
+}
+
+    
+h1 { 
+    font-size: 6vw;
+margin-top: 0%;
+}
 
 
 
@@ -47,7 +56,7 @@ margin-bottom: -7%;
 
 .spargeln {
     width: 7%;
-margin-left: 15%;
+margin-left: 10%;
 margin-bottom: -7%;
     position: relative;
     transform: scaleX(-1);
