--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -155,6 +155,24 @@ button:hover {
         border: none;
     }
 
+    h1 {
+
+        font-size: 60px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 100%;
+        color: white;
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: left;
+        width: 80%;
+        height: 172px;
+        flex-shrink: 0;
+
+    }
+
 }
 
 
@@ -164,7 +182,7 @@ button:hover {
 
     .bildheader {
         width: 100%;
-        height: 600px;
+        height: 250px;
         margin-top: 0;
         display: block;
         position: relative;
@@ -183,4 +201,20 @@ button:hover {
         border: none;
     }
 
+    h1 {
+
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 100%;
+        color: white;
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: left;
+        width: 80%;
+        flex-shrink: 0;
+
+    }
 }
