--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -67,7 +67,7 @@ margin-bottom: -7%;
 .form-container {
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+width: 80%;
     margin: 0;
 }
 
@@ -92,17 +92,17 @@ textarea {
 }
 
 #betreff {
-    width: 455px;
+    width: 50%;
     height: 44px;
 }
 
 #email {
-    width: 455px;
+    width: 50%;
     height: 44px;
 }
 
 #nachricht {
-    width: 930px;
+    width: 100%;
     height: 260px;
 }
 
