--- a/CSS/landingpage.css
+++ b/CSS/landingpage.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: auto;
     margin-top: 0;
+    display: block;
+    position: relative;
 }
 
 .imgwelt {
@@ -259,6 +261,11 @@
         margin-top: 0;
         display: block;
         position: relative;
+    }
+    .imgwelt {
+        top: 45%;
+        left: 60%;
+        display: block;
     }
 
     .buttons
