--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -137,7 +137,7 @@ button:hover {
 
     .bildheader {
         width: 100%;
-        height: 500px;
+        height: 400px;
         margin-top: 0;
         display: block;
         position: relative;
@@ -173,6 +173,11 @@ button:hover {
         flex-shrink: 0;
 
     }
+
+  .warenkorb {
+width: 20%;
+
+  }  
 
 }
 
