--- a/CSS/landingpage.css
+++ b/CSS/landingpage.css
@@ -48,9 +48,9 @@
 }
 
 #front-button {
-    position: absolute;
     left: 10%;
     top: 60%;
+    position: absolute;
 
 }
 
@@ -99,17 +99,17 @@
 }
 
 .imgzwiebel {
-    width: 145px;
-    height: 145px;
+    width: 15%;
+    height: auto;
     transform: rotate(90deg);
     z-index: 2;
     position: absolute;
     left: 15%;
 }
 
-.startseite-gemüse {
-    width: 328px;
-    height: 328px;
+.startseite-gemuese {
+    width: 20%;
+    height: auto;
     z-index: 2;
     position: absolute;
     left: 70%;
@@ -143,49 +143,18 @@
     align-items: center;
     margin-top: 40px;
     margin-bottom: 40px;
+    width: 25%;
+    height: auto;
 }
 
-#denner {
-    width: 265px;
-    height: 57px;
-}
-
-#rüedu {
-    width: 265px;
-    height: 174px;
-}
-
-#alnatura {
-    width: 265px;
-    height: 132px;
-}
-
-#migros {
-    width: 285px;
-    height: 67px;
+.logopartner {
+    width: 80%;
+    height: auto;
 }
 
 
-/*** small laptop  ***/
-@media screen and (max-width: 1100px) {
-
-    h1 {
-
-        font-size: 70px;
 
 
-    }
-
-
-    .headerbild{
-        width: 100%;
-        height: 400px;
-        margin-top: 0;
-        display: block;
-        position: relative;
-    }
-
-}
 
 /*** Tablet  ***/
 @media screen and (max-width: 768px) {
@@ -193,7 +162,7 @@
 
     .headerbild{
         width: 100%;
-        height: 500px;
+        height: 300px;
         margin-top: 0;
         display: block;
         position: relative;
@@ -212,22 +181,14 @@
         border: none;
     }
     #front-button {
-        width: fit-content;
-        background-color: rgba(157, 192, 28, 1);
-        color: #fff;
-        font-size: 18px;
-        font-weight: bold;
-        text-transform: uppercase;
-        padding: 10px;
-        border-radius: 10px;
-        transition: background-color 0.3s ease;
-        border: none;
-    
+    top: 50%;
+    left: 10%;
     
     }
     .partner {
-        flex-direction: column;
-        width: fit-content;
+        flex-direction: row;
+        gap: 30px;
+
     }
 
     h1 {
@@ -277,22 +238,16 @@
         transition: background-color 0.3s ease;
         border: none;
     }
-    .partner {
-        flex-direction: column;
-        width: fit-content;
-    }
+
+
     #front-button {
-        width: fit-content;
-        background-color: rgba(157, 192, 28, 1);
-        color: #fff;
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
-        padding: 10px;
-        border-radius: 10px;
-        transition: background-color 0.3s ease;
-        border: none;
+      top: 35%;
+      left: 10%;
     
+    }
+
+    .partner {    
+        gap: 10px;
     }
 
     h1 {
@@ -310,5 +265,9 @@
         width: 80%;
         flex-shrink: 0;
 
+    }
+    .nachaltig-buttons {
+
+        flex-wrap: wrap;
     }
 }
